--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
   function loadPaper(file) {
     document.getElementById('quizFrame').src = file;
   }
+  <p><a href="mock-120.html">Take the 120-question FRCS Vascular mock exam</a></p>
 </script>
 </body>
 </html>
