--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@
 <body>
 <header>
   <h1>FRCS Vascular SBAs – Exam Hub</h1>
-  <p>Paper 1: Q281–330 &nbsp;•&nbsp; Paper 2: Q331–380</p>
+ <p>Paper 1: Q281–330 &nbsp;•&nbsp; Paper 2: Q331–380 &nbsp;•&nbsp; Viva Paper 2: Q1–120</p>
 </header>
 
 <main>
   <div class="controls">
     <button onclick="loadPaper('paper1_281-330.html')">Open Paper 1 (281–330)</button>
     <button class="secondary" onclick="loadPaper('paper2_331-380.html')">Open Paper 2 (331–380)</button>
+    <button class="secondary" onclick="loadPaper('frcs-viva-paper2.html')">Open Viva (Paper 2, 1–120)</button>
     <span class="info">Click a paper to load the interactive quiz below.</span>
   </div>
 
